Endpoint /tree now take array of relatives
