# fam_tree_rest_api/api/src/controller/individuals_controller.rs
@@ -49,10 +49,49 @@ async fn edit_individual(
 struct PostIndividualBodyReq {
     #[serde(flatten)]
     pub ind: Individual,
+    pub relatives: Vec<Relatives>,
+}
 
-    pub relative: Option<String>,
-    pub relation: Option<RelType>,
-    pub role: Option<Role>,
+#[derive(Serialize, Deserialize, Debug, Clone)]
+struct Relatives {
+    pub relative: String,
+    pub relation: RelType,
+    pub role: Role,
+}
+
+struct RelativesWrapper<'a> {
+    ind_id: i32,
+    rels: &'a Vec<Relatives>,
+    index: usize,
+}
+
+impl<'a> Iterator for RelativesWrapper<'a> {
+    type Item = &'a Relatives;
+
+    fn next(&mut self) -> Option<Self::Item> {
+        if self.index >= self.rels.len() {
+            return None;
+        }
+
+        self.index += 1;
+        Some(&self.rels[self.index - 1])
+    }
+}
+
+impl<'a> From<RelativesWrapper<'a>> for Vec<Relationship> {
+    fn from(rels: RelativesWrapper) -> Vec<Relationship> {
+        let id = rels.ind_id;
+        rels.map(|rel| {
+            Relationship::new(
+                None,
+                Some(id),
+                Some(rel.relative.parse().unwrap()),
+                rel.relation,
+                Role::reverse(&rel.role),
+            )
+        })
+        .collect()
+    }
 }
 
 #[post("/{username}")]
@@ -69,61 +108,92 @@ async fn create_individual(
         .individuals
         .create_individual(&individual)
         .await?;
-    //.create_individual(&individual)
-    //.await?;
+
     let (query_res, transaction) = res;
     let ind_id = IndividualId { id: query_res };
 
-    if body.relative.is_some() && body.relation.is_some() && body.role.is_some() {
-        let relative_id = body.relative.unwrap().parse().unwrap();
+    match body.relatives.is_empty() {
+        false => {
+            let relatives = RelativesWrapper {
+                ind_id: ind_id.id,
+                rels: &body.relatives,
+                index: 0,
+            };
 
-        let relation = Relationship::new(
-            None,
-            Some(ind_id.id),
-            Some(relative_id),
-            body.relation.unwrap(),
-            body.role.unwrap(),
-        );
+            let relation_converter = move |rel| Vec::<Relationship>::from(rel);
+            let relations = relation_converter(relatives);
 
-        transaction.commit().await;
-        let query_res = app_state
-            .context
-            .relationships
-            .create_relationship(&relation)
-            .await?;
-        debug!("{:?}", query_res);
+            transaction.commit().await?;
+            let query_results = app_state
+                .context
+                .relationships
+                .create_relationship_many(&relations)
+                .await;
 
-        app_state
-            .context
-            .families
-            .create_individual_family_rel(None, Some(relative_id), ind_id.id)
-            .await?;
-    } else {
-        let family = Family {
-            id: None,
-            author_username: username.into_inner(),
-            root_id: ind_id.id,
-        };
-        let family_id = match app_state.context.families.create_family(&family).await {
-            Ok(id) => {
-                transaction.commit().await;
-                id
+            let mut returned_errors = Vec::with_capacity(query_results.len());
+            for i in 0..query_results.len() {
+                if let Err(e) = &query_results[i] {
+                    debug!("{}", e);
+                    returned_errors.push(format!(
+                        "creating relation between {} and {} failed",
+                        ind_id.id,
+                        relations[i].individual_2_id.unwrap()
+                    ));
+                }
             }
-            Err(e) => {
-                debug!("{}", e);
-                transaction.rollback().await;
-                return Err(AppError::from(e));
-            }
-        };
 
-        app_state
-            .context
-            .families
-            .create_individual_family_rel(Some(family_id), None, ind_id.id)
-            .await?;
+            debug!("{:?}", query_res);
+
+            app_state
+                .context
+                .families
+                .create_individual_family_rel(
+                    None,
+                    Some(relations[0].individual_2_id.unwrap()),
+                    ind_id.id,
+                )
+                .await?;
+
+            let response_body = serde_json::json!({
+                "success": true,
+                "failed_to_create_relation": returned_errors,
+                "new_ind_id": ind_id.id.to_string()
+            });
+
+            Ok(HttpResponse::Created().json(response_body))
+        }
+        true => {
+            let family = Family {
+                id: None,
+                author_username: username.into_inner(),
+                root_id: ind_id.id,
+            };
+            let family_id = match app_state.context.families.create_family(&family).await {
+                Ok(id) => {
+                    transaction.commit().await?;
+                    id
+                }
+                Err(e) => {
+                    debug!("{}", e);
+                    transaction.rollback().await?;
+                    return Err(AppError::from(e));
+                }
+            };
+
+            app_state
+                .context
+                .families
+                .create_individual_family_rel(Some(family_id), None, ind_id.id)
+                .await?;
+
+            let response_body = serde_json::json!({
+                "success": true,
+                "new_family_id": family_id.to_string(),
+                "new_ind_id": ind_id.id.to_string()
+            });
+            Ok(HttpResponse::Created().json(response_body))
+        }
     }
-
-    Ok(HttpResponse::Created().json(ind_id))
 }
 
 #[delete("/{id}")]
